--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -22,8 +22,9 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt nbconvert
+        pip install -r requirements.txt nbconvert ipykernel
+        python -m ipykernel install --user --name=python3
 
     - name: Execute CNN Notebook
       run: |
-        jupyter nbconvert --to notebook --execute notebooks/cnn_mnist_c.ipynb --output executed.ipynb --ExecutePreprocessor.timeout=300
+        jupyter nbconvert --to notebook --execute notebooks/cnn_mnist_c.ipynb --output executed.ipynb --ExecutePreprocessor.kernel_name=python3 --ExecutePreprocessor.timeout=600
